--- a/css/main.css
+++ b/css/main.css
@@ -5,17 +5,21 @@
     border: none;
     margin: 0;
     padding: 0;
-
     box-sizing: border-box;
 }
 
+
+
 body { 
     font-size: 16px;
-    background-color: black;
-
     font-family: Arial, Helvetica, sans-serif;
-
     color: white;
+
+    background-color: rgb(2, 2, 2);
+    background-image: url(../images/lined_paper.jpeg) ;
+    color: rgb(11, 11, 11);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header > h1 { text-align: center; padding: 8px; }
