--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,11 @@ body {
     background-size: cover;
 }
 
-header > h1 { text-align: center; padding: 8px; }
+#heading { text-align: center;
+    padding-bottom: 100px;
+    font-size: 100px;
+    font-family: american typewriter;
+}
 
 article { 
     width: 25%; 
@@ -35,24 +39,24 @@ article {
     text-align: left;
 }
 
-main { text-align: center; }
+main { text-align: center; padding-top: 200px;}
 
-article > h2 { color: gray;  padding: 4px 8px; }
+article > h2 { color: rgb(0, 0, 0);  padding: 4px 8px; }
 
-article:first-of-type { border: 4px solid gray; }
+article:first-of-type { border: 4px solid rgb(0, 0, 0); }
 
-#inprogress { border: 4px solid red; }
-#inprogress h2 { color: red; }
+#inprogress { border: 4px solid rgb(0, 0, 0); }
+#inprogress h2 { color: rgb(0, 0, 0); }
 
-#done { border: 4px solid green; }
-#done h2 { color: green; }
+#done { border: 4px solid rgb(0, 0, 0); }
+#done h2 { color: rgb(0, 0, 0); }
 
 ul { list-style-type: none; }
 
 ul li { padding: 6px 8px; text-transform: uppercase; }
 
-.todo li:nth-child(odd) { background-color: rgba(255, 255, 255, 0.2)}
+.todo li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
 
-.inprogress li:nth-child(odd) { background-color: rgba(255, 0, 0, 0.5)}
+.inprogress li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
 
-.done li:nth-child(odd) { background-color: rgba(0, 255, 0, 0.5)}
+.done li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
