--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,9 @@ article {
     text-align: left;
 }
 
-main { text-align: center; padding-top: 200px;}
+main { text-align: center; padding-top: 200px;
+       padding-left:100px ;
+}
 
 article > h2 { color: rgb(0, 0, 0);  padding: 4px 8px; }
 
