--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,49 @@
     box-sizing: border-box;
 }
 
+.checkbox-container {
+   display: flex;
+   align-items: center;
+   padding-left: 30px;
+   
+
+}
+
+.checkbox-container label {
+    display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+}
+
+.checkbox-container input [type='checkbox'] {
+    cursor:pointer;
+    opacity: 0%;
+    position: absolute;
+    padding-left: 30px;
+}
+
+.checkbox-container label ::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+.checkbox-container ::after {
+    color: rgb(0, 255, 26);
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+}
 
 
 body { 
-    font-size: 16px;
+    font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 
@@ -47,17 +86,31 @@ article > h2 { color: rgb(0, 0, 0);  padding: 4px 8px; }
 
 article:first-of-type { border: 4px solid rgb(0, 0, 0); }
 
-#inprogress { border: 4px solid rgb(0, 0, 0); }
-#inprogress h2 { color: rgb(0, 0, 0); }
 
-#done { border: 4px solid rgb(0, 0, 0); }
-#done h2 { color: rgb(0, 0, 0); }
+#todo { border: 4px solid rgb(0, 0, 0); }
+#todo h2 { color: rgb(0, 0, 0);
+    background-color: rgba(240, 138, 174, 0.489); 
+    font-family: american typewriter;
+}
+
+
+#inprogress { border: 4px solid rgb(0, 0, 0); }
+#inprogress h2 { color: rgb(0, 0, 0); 
+                 background-color: rgba(251, 255, 170, 0.64);
+                 font-family: american typewriter;
+}
+
+#done { border: 4px solid rgba(0, 0, 0, 0.826); }
+#done h2 { color: rgb(0, 0, 0);
+           background-color: rgba(164, 227, 252, 0.647); 
+           font-family: american typewriter;
+}
 
 ul { list-style-type: none; }
 
 ul li { padding: 6px 8px; text-transform: uppercase; }
 
-.todo li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
+.checkbox-container li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
 
 .inprogress li:nth-child(odd) { background-color: rgba(255, 134, 223, 0.49)}
 
